[package]
name = "segon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
async-trait = "0.1.58"
sha-crypt = "0.4.0"
thiserror = "1.0.37"
