[package]
name = "segon"
version = "0.1.0"
edition = "2021"

[dependencies]
# basics
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"

# web
warp = "0.3"

# logging
log = "0.4"
pretty_env_logger = "0.4"

# hasher
sha-crypt = "0.4"

# token
jsonwebtoken = "8.1"

# scheduler
tokio-cron-scheduler = "0.8"

# database
redis = { version = "0.22.1", features = ["tokio-comp", "json"] }

# id generator
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
